# wasmxchg

./: .gitignore  CMakeCPack.cmake  CMakeLists.txt  PackageConfig.cmake.in  README.md
WiX/: LICENSE.rtf
src/: CMakeLists.txt
src/hal/: CMakeLists.txt
src/osal/: CMakeLists.txt
